--- a/admintheme/static/admin/css/base.css
+++ b/admintheme/static/admin/css/base.css
@@ -726,20 +726,21 @@ table {
 table th, table td {
   line-height: 20px;
   text-align: left;
+  vertical-align: top;
   border-top: 1px solid 1px solid #dddddd;
   border-left: 1px solid 1px solid #dddddd;
   padding: 5px;
 }
-/* line 13, ../scss/sass/_tables.scss */
+/* line 14, ../scss/sass/_tables.scss */
 table th {
   font-weight: bold;
   padding: 2px 5px;
 }
-/* line 18, ../scss/sass/_tables.scss */
+/* line 19, ../scss/sass/_tables.scss */
 table tr th:first-child, table tr td:first-child {
   border-left: 0;
 }
-/* line 23, ../scss/sass/_tables.scss */
+/* line 24, ../scss/sass/_tables.scss */
 table thead th {
   border-top: 0;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #e6e6e6));
@@ -749,13 +750,13 @@ table thead th {
   background: linear-gradient(#ffffff, #e6e6e6);
   font-size: .8rem;
 }
-/* line 27, ../scss/sass/_tables.scss */
+/* line 28, ../scss/sass/_tables.scss */
 table thead th .text a {
   display: block;
   cursor: pointer;
   padding: 2px 5px;
 }
-/* line 32, ../scss/sass/_tables.scss */
+/* line 33, ../scss/sass/_tables.scss */
 table thead th:hover {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e6e6e6), color-stop(100%, #d9d9d9));
   background: -webkit-linear-gradient(#e6e6e6, #d9d9d9);
@@ -772,28 +773,28 @@ table thead th:hover .sortremove:before {
   margin-right: .5em;
   content: "\f057";
 }
-/* line 39, ../scss/sass/_tables.scss */
+/* line 40, ../scss/sass/_tables.scss */
 table thead th.sorted .sortoptions {
   display: block;
   float: right;
   text-align: right;
 }
-/* line 43, ../scss/sass/_tables.scss */
+/* line 44, ../scss/sass/_tables.scss */
 table thead th.sorted .sortoptions a {
   display: inline-block;
   width: 14px;
   height: 1.1em;
 }
-/* line 51, ../scss/sass/_tables.scss */
+/* line 52, ../scss/sass/_tables.scss */
 table tbody th, table tbody td {
   border-top: 1px solid 1px solid #dddddd;
   background: transparent;
 }
-/* line 56, ../scss/sass/_tables.scss */
+/* line 57, ../scss/sass/_tables.scss */
 table tbody tr.row2 {
   background: #f9f9f9;
 }
-/* line 59, ../scss/sass/_tables.scss */
+/* line 60, ../scss/sass/_tables.scss */
 table tbody tr:hover, table tbody tr.row2:hover {
   background: whitesmoke;
 }
@@ -1251,12 +1252,98 @@ input[type="submit"].default:hover, button.default:hover {
   outline: none;
 }
 
-/* line 12, ../scss/sass/base.scss */
+/* A module is a box used in a variety of ways in the admin:
+    Dashboard:
+        Apps: Each app is a module containing a table
+        Recent Actions: Module with an h2, h3 and a p or a ul;
+*/
+/* line 21, ../scss/sass/_modules.scss */
+.module {
+  margin-bottom: .3rem;
+  background: white;
+  border: 1px solid #d4d4d4;
+  line-height: 1.63rem;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+}
+/* line 29, ../scss/sass/_modules.scss */
+.module table {
+  width: 100%;
+  font-size: .9em;
+}
+/* line 32, ../scss/sass/_modules.scss */
+.module table th {
+  font-weight: bold;
+  width: 100%;
+}
+/* line 35, ../scss/sass/_modules.scss */
+.module table th a {
+  color: #5b80b2;
+  text-decoration: none;
+}
+/* line 18, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+.module table th a:visited {
+  color: #5b80b2;
+}
+/* line 21, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+.module table th a:focus {
+  color: #5b80b2;
+}
+/* line 24, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+.module table th a:hover {
+  color: #4d6c97;
+}
+/* line 27, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+.module table th a:active {
+  color: #7393bd;
+}
+/* line 41, ../scss/sass/_modules.scss */
+.module caption, .module h2 {
+  margin: 0;
+  padding: 2px 5px 3px 5px;
+  font-size: .9rem;
+  text-align: left;
+  font-weight: bold;
+  -webkit-border-radius: 8px 8px 0 0;
+  -moz-border-radius: 8px 8px 0 0;
+  -ms-border-radius: 8px 8px 0 0;
+  -o-border-radius: 8px 8px 0 0;
+  border-radius: 8px 8px 0 0;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #efefef));
+  background: -webkit-linear-gradient(#ffffff, #efefef);
+  background: -moz-linear-gradient(#ffffff, #efefef);
+  background: -o-linear-gradient(#ffffff, #efefef);
+  background: linear-gradient(#ffffff, #efefef);
+  border-bottom: 1px solid #c8c8cb;
+}
+/* line 16, ../scss/sass/_modules.scss */
+.module caption a, .module h2 a {
+  color: inherit;
+  text-decoration: inherit;
+  cursor: inherit;
+}
+/* line 6, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/links/_unstyled-link.scss */
+.module caption a:active, .module caption a:focus, .module h2 a:active, .module h2 a:focus {
+  outline: none;
+}
+/* line 44, ../scss/sass/_modules.scss */
+.module h3 {
+  font-size: .8rem;
+  font-weight: bold;
+  padding: 5px;
+  margin-top: 1em;
+  margin-bottom: 0;
+}
+
+/* line 13, ../scss/sass/base.scss */
 ul {
   margin: 0;
 }
 
-/* line 16, ../scss/sass/base.scss */
+/* line 17, ../scss/sass/base.scss */
 body {
   background: #eeeeee;
   color: #333333;
@@ -1266,7 +1353,7 @@ body {
   margin: 0;
 }
 
-/* line 25, ../scss/sass/base.scss */
+/* line 26, ../scss/sass/base.scss */
 h1 {
   font-size: 1.3rem;
   padding: 0 0.4rem 0 0;
@@ -1275,7 +1362,7 @@ h1 {
   line-height: 2.2rem;
 }
 
-/* line 33, ../scss/sass/base.scss */
+/* line 34, ../scss/sass/base.scss */
 #header {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #6c7a95), color-stop(100%, #4d5b76));
   background: -webkit-linear-gradient(#6c7a95, #4d5b76);
@@ -1289,7 +1376,7 @@ h1 {
   overflow: hidden;
   width: 100%;
 }
-/* line 40, ../scss/sass/base.scss */
+/* line 41, ../scss/sass/base.scss */
 #header h1 {
   padding: 0 10px;
   font-size: 1.1rem;
@@ -1298,7 +1385,7 @@ h1 {
   line-height: 20px;
 }
 
-/* line 49, ../scss/sass/base.scss */
+/* line 50, ../scss/sass/base.scss */
 #user-tools {
   position: absolute;
   top: 0;
@@ -1307,7 +1394,7 @@ h1 {
   font-size: .8rem;
   text-align: right;
 }
-/* line 57, ../scss/sass/base.scss */
+/* line 58, ../scss/sass/base.scss */
 #user-tools a {
   text-decoration: none;
   color: white;
@@ -1317,7 +1404,7 @@ h1 {
   text-decoration: underline;
 }
 
-/* line 63, ../scss/sass/base.scss */
+/* line 64, ../scss/sass/base.scss */
 .add-another {
   display: inline-block;
   *display: inline;
@@ -1409,112 +1496,26 @@ h1 {
   margin-right: .5em;
   content: "\f067";
 }
-/* line 66, ../scss/sass/base.scss */
+/* line 67, ../scss/sass/base.scss */
 .add-another:before {
   margin-right: 0;
 }
-/* line 69, ../scss/sass/base.scss */
+/* line 70, ../scss/sass/base.scss */
 .add-another img {
   display: none;
 }
 
-/* line 75, ../scss/sass/base.scss */
+/* line 76, ../scss/sass/base.scss */
 #content {
   margin: 10px 15px;
 }
 
-/* line 79, ../scss/sass/base.scss */
+/* line 80, ../scss/sass/base.scss */
 #content.colMS {
   margin-right: 20em;
 }
 
-/* A module is a box used in a variety of ways in the admin:
-    Dashboard:
-        Apps: Each app is a module containing a table
-        Recent Actions: Module with an h2, h3 and a p or a ul;
-*/
-/* line 103, ../scss/sass/base.scss */
-.module {
-  margin-bottom: .3rem;
-  background: white;
-  border: 1px solid #d4d4d4;
-  line-height: 1.63rem;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
-}
-/* line 111, ../scss/sass/base.scss */
-.module table {
-  width: 100%;
-  font-size: .9em;
-}
-/* line 114, ../scss/sass/base.scss */
-.module table th {
-  font-weight: bold;
-  width: 100%;
-}
-/* line 117, ../scss/sass/base.scss */
-.module table th a {
-  color: #5b80b2;
-  text-decoration: none;
-}
-/* line 18, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
-.module table th a:visited {
-  color: #5b80b2;
-}
-/* line 21, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
-.module table th a:focus {
-  color: #5b80b2;
-}
-/* line 24, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
-.module table th a:hover {
-  color: #4d6c97;
-}
-/* line 27, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
-.module table th a:active {
-  color: #7393bd;
-}
-/* line 123, ../scss/sass/base.scss */
-.module caption, .module h2 {
-  margin: 0;
-  padding: 2px 5px 3px 5px;
-  font-size: .9rem;
-  text-align: left;
-  font-weight: bold;
-  -webkit-border-radius: 8px 8px 0 0;
-  -moz-border-radius: 8px 8px 0 0;
-  -ms-border-radius: 8px 8px 0 0;
-  -o-border-radius: 8px 8px 0 0;
-  border-radius: 8px 8px 0 0;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #efefef));
-  background: -webkit-linear-gradient(#ffffff, #efefef);
-  background: -moz-linear-gradient(#ffffff, #efefef);
-  background: -o-linear-gradient(#ffffff, #efefef);
-  background: linear-gradient(#ffffff, #efefef);
-  border-bottom: 1px solid #c8c8cb;
-}
-/* line 98, ../scss/sass/base.scss */
-.module caption a, .module h2 a {
-  color: inherit;
-  text-decoration: inherit;
-  cursor: inherit;
-}
-/* line 6, ../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/typography/links/_unstyled-link.scss */
-.module caption a:active, .module caption a:focus, .module h2 a:active, .module h2 a:focus {
-  outline: none;
-}
-/* line 126, ../scss/sass/base.scss */
-.module h3 {
-  font-size: .8rem;
-  font-weight: bold;
-  padding: 5px;
-  margin-top: 1em;
-  margin-bottom: 0;
-}
-
-/* line 135, ../scss/sass/base.scss */
+/* line 85, ../scss/sass/base.scss */
 .object-tools {
   padding-left: 0;
   padding-top: 0;
@@ -1523,7 +1524,7 @@ h1 {
   margin-top: -2.1em;
   margin-bottom: -2em;
 }
-/* line 143, ../scss/sass/base.scss */
+/* line 93, ../scss/sass/base.scss */
 .object-tools li {
   display: inline-block;
   *display: inline;
@@ -1604,11 +1605,11 @@ h1 {
 .object-tools li a:active, .object-tools li a:focus {
   outline: none;
 }
-/* line 148, ../scss/sass/base.scss */
+/* line 98, ../scss/sass/base.scss */
 .object-tools li + li {
   margin-left: -1px;
 }
-/* line 151, ../scss/sass/base.scss */
+/* line 101, ../scss/sass/base.scss */
 .object-tools li:first-child {
   margin-left: 0;
   -moz-border-radius-topleft: 4px;
@@ -1618,7 +1619,7 @@ h1 {
   -webkit-border-bottom-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-/* line 155, ../scss/sass/base.scss */
+/* line 105, ../scss/sass/base.scss */
 .object-tools li:last-child {
   margin-right: 0;
   -moz-border-radius-topright: 4px;
@@ -1647,11 +1648,11 @@ h1 {
   content: "\f067";
 }
 
-/* line 169, ../scss/sass/base.scss */
+/* line 119, ../scss/sass/base.scss */
 #change-history tbody th {
   width: 18em;
 }
-/* line 172, ../scss/sass/base.scss */
+/* line 122, ../scss/sass/base.scss */
 #change-history thead th {
   width: auto;
 }
